ENG-29107: Add withJavaProperty to forward -D system properties to VoltDB server JVM.
Adds VoltDBContainer.withJavaProperty(key, value) and a fan-out
  VoltDBCluster.withJavaProperty(key, value) that append -Dkey=value
  entries to VOLTDB_OPTS while preserving the existing log4j and
  --add-opens baseline. Useful for fault-injection and test-only knobs
  that VoltDB reads from JVM system properties.